# Kondo-Heisenberg

./: .clang-tidy  CMakeLists.txt  C_V_L=4_U=0.00.txt  C_V_L=4_U=2.10.txt  C_V_L=6_U=0.00.txt  C_V_Sz=+2.0_n=1.50_U=2.1.txt  C_V_Sz=-0.0_n=1.50_U=2.1.txt  C_V_Sz=-1.0_n=1.50_U=2.1.txt  C_V_Sz=-3.0_n=1.50_U=2.1.txt  C_V_n=0.50_U=0.0.txt  C_V_n=0.50_U=0.2.txt  C_V_n=0.50_U=0.4.txt  C_V_n=0.50_U=0.6.txt  C_V_n=0.50_U=0.8.txt  C_V_n=0.50_U=1.0.txt  C_V_n=0.50_U=1.2.txt  C_V_n=0.50_U=1.4.txt  C_V_n=0.50_U=1.6.txt  C_V_n=0.50_U=1.8.txt  C_V_n=0.50_U=2.0.txt  C_V_n=0.50_U=2.2.txt  C_V_n=0.50_U=2.4.txt  C_V_n=0.50_U=2.6.txt  C_V_n=1.00_U=2.10.txt  C_V_n=1.33_U=0.2.txt  C_V_n=1.33_U=0.6.txt  C_V_n=1.33_U=1.0.txt  C_V_n=1.33_U=1.4.txt  C_V_n=1.33_U=1.8.txt  C_V_n=1.33_U=2.2.txt  C_V_n=1.33_U=2.6.txt  C_V_n=1.50_U=0.0.txt  C_V_n=1.50_U=0.00.txt  C_V_n=1.50_U=0.00_M=50_R=5.txt  C_V_n=1.50_U=0.05.txt  C_V_n=1.50_U=0.10.txt  C_V_n=1.50_U=0.15.txt  C_V_n=1.50_U=0.2.txt  C_V_n=1.50_U=0.20.txt  C_V_n=1.50_U=0.25.txt  (+490 more)
Results/: Static_SSF_n=1.00.txt  Static_SSF_n=1.50.txt  Static_SSF_n=2.00.txt
size scaling/: Cv_L=10_U=0.10W__Jh=0.25U.txt  Cv_L=10_U=1.00W__Jh=0.25U.txt  Cv_L=10_U=2.00W__Jh=0.25U.txt  Cv_L=10_U=3.00W__Jh=0.25U.txt  Cv_L=4_U=0.10W__Jh=0.25U.txt  Cv_L=4_U=1.00W__Jh=0.25U.txt  Cv_L=4_U=2.00W__Jh=0.25U.txt  Cv_L=4_U=3.00W__Jh=0.25U.txt  Cv_L=6_U=0.10W__Jh=0.25U.txt  Cv_L=6_U=1.00W__Jh=0.25U.txt  Cv_L=6_U=2.00W__Jh=0.25U.txt  Cv_L=6_U=3.00W__Jh=0.25U.txt  Cv_L=8_U=0.10W__Jh=0.25U.txt  Cv_L=8_U=1.00W__Jh=0.25U.txt  Cv_L=8_U=2.00W__Jh=0.25U.txt  Cv_L=8_U=3.00W__Jh=0.25U.txt  (+16 more)
(+62 files in other folders)
